--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.25.4",
     "dot-env": "^0.0.1",
     "firebase": "^12.0.0",
     "flowbite": "^3.1.2",
